objects/TECS__c.object
<CustomObject>
    <fields>
        <fullName>INTERPOL_CaseTecs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INTERPOL Case</label>
        <referenceTo>ComplaintCase</referenceTo>
        <relationshipLabel>TECS</relationshipLabel>
        <relationshipName>TECS_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Entry</fullName>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>TECS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TECS Id Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TECS&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>